--- a/src/Labs/Lab2/index.css
+++ b/src/Labs/Lab2/index.css
@@ -501,3 +501,30 @@
 .wd-width-75px {
   width: 75px;
 }
+
+#wd-bs-grid-system {
+  margin-top: 30px;
+}
+
+/* Optional: Customize each section box */
+#wd-bs-grid-system .col {
+  border: 1px solid #ddd;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Optional: More spacing between rows */
+#wd-bs-grid-system .row + .row {
+  margin-top: 20px;
+}
+
+#wd-bs-grid-system .row {
+  margin-top: 10px;
+}
+
+
+#wds-bs-grid-system h3 {
+  margin: 0;
+}
