--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -65,4 +64,21 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.list-group.wd {
+  background: white;
+}
+.list-group.wd > .list-group-item {
+  background: white;
+  color: #dc3545; /* Bootstrap red */
+  font-size: 1.1rem;
+  border-radius: 0;
+  padding: 12px 18px;
+}
+.list-group.wd > .list-group-item.active {
+  color: black;
+  background-color: white;
+  border-left: 3px solid black !important;
+  font-weight: bold;
 }
